# asteroids

./: README.md  asteroid.py  asteroidfield.py  bomb.py  circleshape.py  constants.py  game_events.jsonl  gamestate.py  geometry.py  main.py  player.py  powerup.py  powerupfield.py  pyproject.toml  shot.py
.cursor/rules/: asteroids-project.md
