[project]
name = "asteroids"
version = "0.1.0"
description = "Classic Asteroids arcade game built with pygame"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
]

[project.gui-scripts]
asteroids = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "asteroid",
    "asteroidfield",
    "circleshape",
    "constants",
    "logger",
    "player",
    "shot",
]

[tool.uv]
package = true
